P3/test/pl0/error/error8.pl0
begin
begin
end
end
end.
